# tbsim

./: .gitignore  .pylintrc  CHANGELOG.md  CLAUDE.md  CNAME  DOCSTRING_IMPROVEMENTS.md  LICENSE  README.md  README_BETA_CALIBRATION_FRAMEWORK.md  README_MKDOCS.md  REVIEW_ANALYSIS.md  STATE_MACHINE_README.md  TB_STATE_DIAGRAM.md  _WithReinfection.csv  agent_tracking_report.txt  code_of_conduct.md  contributing.md  diff.txt  linelist.csv  mkdocs.yml  mkdocs_simple.yml  mkdocs_working.yml  pyproject.toml  quick_reference.md  req.txt  requirements.txt  setup.py  starsim_calibration.db  state_transition_graph.html  test_scripts_simple.py  test_workflow.py  test_workflow.sh
TB_LSHTM/: analyzers.py  compare_transitions.py  disease.py  interventions.py  run_sensitivity  tb_lshtm.py  utils.py
binder/: .binderignore  Dockerfile  README.md  binder_config.json  postBuild  requirements.txt  start
docs/: MIGRATION_TO_STARSIM_V3.md  Makefile  PLAN_ADD_LSHTM_MODELS.md  PLAN_EMBED_TB_LSHTM.md  README.md  STARSIM_V3_MIGRATION_SUMMARY.md  TB_DISTRIBUTION_IMPROVEMENTS.md  THEME_SWITCH.md  _quarto.yml  api.md  build_docs.py  changelog.md  changelog.rst  conf.py  contributing.md  contributing.rst  convert_sphinx_to_quarto.py  examples.md  examples.rst  generate_interlinks.py  index.md  index.qmd  index.rst  installation.md  installation.rst  make.bat  modules.md  modules.rst  placeholder.txt  post_publishing.py  publish  quickstart.md  quickstart.rst  requirements-mkdocs.txt  requirements-quarto.txt  requirements-system.txt  requirements.txt  scripts.md  scripts.rst  state_machine_architecture.md  (+11 more)
examples/: state_machine_demo.py
scripts/: README_interventions.md  README_reorganization.md  common_functions.py  migrate_to_starsim_v3.py  migrate_to_starsim_v3_updated.py  plots.py  run_dots_implementation.py  run_hiv.py  run_malnutrition.py  run_tb.py  run_tb_and_malnutrition.py  run_tb_baseline_and_beta.py  run_tb_bcg_beta.py  run_tb_bcg_tpt.py  run_tb_bcg_tpt_byage.py  run_tb_burn_in_South_Africa.py  run_tb_burn_in_South_Africa_enhanced_diagnostic_with_demographics.py  run_tb_cascadedcare.py  run_tb_interv.py  run_tb_interventions.py  run_tb_with_analyzer.py  run_tbhiv.py  run_tbhiv_scenarios.py  simple_example.py  tbsim_byage.py  tbsim_byage_workaround.py  test_minimal_bcg.py  test_minimal_bcg_with_intervention.py  test_simplified_bcg.py
shiny_app/: CHANGES_SUMMARY.md  Dockerfile  PARAMETER_CATEGORIES.md  QUICK_START.md  README.md  RUN_APP.md  app.R  basic_bcg_sample.py  docker-compose.yml  requirements.txt  run_app.R  run_server.R  run_tb_custom_params.py  setup.R  simple_app.R  start.sh  start_app.sh  stop_app.sh  test_app_validation.R  test_real_tbsim.R  test_real_tbsim_results.R  test_simple_tbsim.R  test_tbsim_integration.R  test_tbsim_v3.R  test_working_tbsim.R
src/: quick_demo.py
starsim_tb/: __init__.py  tbmodel.py
tbsim/: README.md  __init__.py  agent_tracking_plots.py  analyzers.py  common.py  config.py  connector.py  connectors.py  harlem.py  immigration.py  interventions.py  malnutrition.py  migration.py  network.py  networks.py  nutrition.py  nutritionenums.py  parametervalues.py  people.py  plots.py  tb.py  (+12 more)
(+788 files in other folders)
